# DUDE

./: .gitignore  .gitmodules
Caffe2/app/: build.gradle
ClientIntelligent/: build.gradle
ClientIntelligent/app/: CMakeLists.txt  build.gradle
ClientIntelligent/gradle/wrapper/: gradle-wrapper.properties
Data/: gen.py
Data/ILSVRC/: label_mapper.py
MNN/app/: CMakeLists.txt  build.gradle
MNN/gradle/wrapper/: gradle-wrapper.properties
Model/MNN/: MNNConvert  onnx2mnn.sh  tflite2mnn.sh
Model/MNN/example/: mnist-1-32.mnn  mnist-4-256.mnn
Model/Pytorch/: batch.py  mnist.py  mobilenetV2.py
Model/Pytorch/example/: mnist-1-32-init.pb  mnist-1-32-predict.pb  mnist-4-256-init.pb  mnist-4-256-predict.pb  mnist-4-256.onnx
Model/TFjs/: batch.py  mnist.py
Model/TFlite/: mnist.py  mnist_quan.py  mobilenet.py  mobilenetV2.py
Model/TFlite/example/: mnist-1-32.tflite  mnist-4-256.tflite
Model/ncnn/: mnist-1-32-sim.onnx  mnist-1-32.onnx  mnist-1-32.param  mnist-4-256-sim.onnx  mnist-4-256.param  onnx2ncnn
TFLite/app/: build.gradle
TFLite/gradle/wrapper/: gradle-wrapper.properties
ncnn/app/: CMakeLists.txt  build.gradle
ncnn/app/src/androidTest/java/com/example/android/ncnn/: ExampleInstrumentedTest.java
ncnn/app/src/main/: AndroidManifest.xml
ncnn/app/src/main/java/com/example/android/ncnn/: MainActivity.java  NCNN.java
ncnn/app/src/main/jni/: ncnn.cpp
ncnn/app/src/test/java/com/example/android/ncnn/: ExampleUnitTest.java
ncnn/gradle/wrapper/: gradle-wrapper.properties
tvm_code/: test_keras.py  tune_relay_arm.py
(+129 files in other folders)
